Add buttons for The sages Rant Collectibles

--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
 											</div>
 										</a>
 									</li>
-<!--									<li>-->
-<!--										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item py-2" data-collection="the-sages-rant-collectibles">-->
-<!--											<div class="d-flex align-items-center">-->
-<!--												<div class="pe-2">-->
-<!--													<img src="img/ownly/own-token.webp" width="22" />-->
-<!--												</div>-->
-<!--												<div>The Sages Rant Collectibles</div>-->
-<!--											</div>-->
-<!--										</a>-->
-<!--									</li>-->
+									<li>
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item py-2" data-collection="the-sages-rant-collectibles">
+											<div class="d-flex align-items-center">
+												<div class="pe-2">
+													<img src="img/ownly/own-token.webp" width="22" />
+												</div>
+												<div>The Sages Rant Collectibles</div>
+											</div>
+										</a>
+									</li>
 									<li>
 										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item py-2" data-collection="titans-of-industry">
 											<div class="d-flex align-items-center">
@@ -539,6 +539,6 @@
 	<script src="js/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.1.8" id="script"></script>
+	<script src="js/script.js?v=3.1.9" id="script"></script>
 </body>
 </html>
