Add icons for each collections in navigation dropdown

--- a/index.html
+++ b/index.html
@@ -73,73 +73,73 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">COLLECTIONS</a>
 								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item py-2" data-collection="cryptosolitaire">
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item p-2" data-collection="cryptosolitaire">
 											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
+												<div class="pe-3">
+													<img src="img/collection-logos/1.webp" class="shadow-sm rounded-3" width="40" />
 												</div>
-												<div>CryptoSolitaire</div>
+												<div class="font-size-sm-110 pe-2">CryptoSolitaire</div>
+											</div>
+										</a>
+									</li>
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item p-2" data-collection="genesis-block">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/2.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">Genesis Block</div>
+											</div>
+										</a>
+									</li>
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item p-2" data-collection="inkvadyrz">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/3.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">Inkvadyrz</div>
+											</div>
+										</a>
+									</li>
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item p-2" data-collection="rewards">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/4.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">Ownly Rewards</div>
+											</div>
+										</a>
+									</li>
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item p-2" data-collection="the-mustachios">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/5.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">The Mustachios</div>
+											</div>
+										</a>
+									</li>
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item p-2" data-collection="the-sages-rant-collectibles">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/6.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">The Sages Rant Collectibles</div>
 											</div>
 										</a>
 									</li>
 									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item py-2" data-collection="genesis-block">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item p-2" data-collection="titans-of-industry">
 											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
+												<div class="pe-3">
+													<img src="img/collection-logos/7.webp" class="shadow-sm rounded-3" width="40" />
 												</div>
-												<div>Genesis Block</div>
-											</div>
-										</a>
-									</li>
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item py-2" data-collection="inkvadyrz">
-											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
-												</div>
-												<div>Inkvadyrz</div>
-											</div>
-										</a>
-									</li>
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item py-2" data-collection="rewards">
-											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
-												</div>
-												<div>Ownly Rewards</div>
-											</div>
-										</a>
-									</li>
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item py-2" data-collection="the-mustachios">
-											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
-												</div>
-												<div>The Mustachios</div>
-											</div>
-										</a>
-									</li>
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item py-2" data-collection="the-sages-rant-collectibles">
-											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
-												</div>
-												<div>The Sages Rant Collectibles</div>
-											</div>
-										</a>
-									</li>
-									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item py-2" data-collection="titans-of-industry">
-											<div class="d-flex align-items-center">
-												<div class="pe-2">
-													<img src="img/ownly/own-token.webp" width="22" />
-												</div>
-												<div>Titans of Industry</div>
+												<div class="font-size-110 pe-2">Titans of Industry</div>
 											</div>
 										</a>
 									</li>
@@ -539,6 +539,6 @@
 	<script src="js/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.2.1" id="script"></script>
+	<script src="js/script.js?v=3.2.2" id="script"></script>
 </body>
 </html>
