Fix display of owned tokens in own profile

--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-<div class="position-relative" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="bg-color-18 position-relative" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
 	<div class="container pt-4 pb-5">
 		<div class="pt-3">
 			<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -67,6 +67,8 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="d-none" id="pagination-container"></div>
 		</div>
 	</div>
 </div>
