Fix account settings view

--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,9 @@
 					</div>
 					
 					<div class="text-center text-sm-start">
-						<div class="neo-bold font-size-250 mb-2" id="profile-name">bernhistorillo</div>
-						<div class="font-size-130 mb-2" id="profile-wallet">0x7685...dd61</div>
-						<div class="font-size-120 mb-3" id="profile-bio">Live and breath Ownly.</div>
+						<div class="neo-bold font-size-250 mb-2" id="profile-name"></div>
+						<div class="font-size-130 mb-2" id="profile-wallet"></div>
+						<div class="font-size-120 mb-3" id="profile-bio"></div>
 					</div>
 				</div>
 				
