Add link of NFT Sales in nav

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 					</button>
 					<div class="collapse navbar-collapse w-100 justify-content-between" id="navbarSupportedContent" style="flex-grow:initial">
 						<ul class="navbar-nav mb-2 mb-lg-0 ps-lg-3">
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">COLLECTIONS</a>
+							<li class="nav-item dropdown px-2">
+								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Collections</a>
 								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item p-2" data-collection="cryptosolitaire">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/1.webp" class="shadow-sm rounded-3" width="40" />
@@ -84,7 +84,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item p-2" data-collection="genesis-block">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=genesis-block" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="genesis-block">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/2.webp" class="shadow-sm rounded-3" width="40" />
@@ -94,7 +94,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item p-2" data-collection="inkvadyrz">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=inkvadyrz" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="inkvadyrz">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/3.webp" class="shadow-sm rounded-3" width="40" />
@@ -104,7 +104,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item p-2" data-collection="rewards">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=rewards" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="rewards">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/4.webp" class="shadow-sm rounded-3" width="40" />
@@ -114,7 +114,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item p-2" data-collection="the-mustachios">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-mustachios" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-mustachios">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/5.webp" class="shadow-sm rounded-3" width="40" />
@@ -124,7 +124,7 @@
 										</a>
 									</li>
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item p-2" data-collection="the-sages-rant-collectibles">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=the-sages-rant-collectibles" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="the-sages-rant-collectibles">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/6.webp" class="shadow-sm rounded-3" width="40" />
@@ -134,7 +134,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item p-2" data-collection="titans-of-industry">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=titans-of-industry" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="titans-of-industry">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/7.webp" class="shadow-sm rounded-3" width="40" />
@@ -144,6 +144,10 @@
 										</a>
 									</li>
 								</ul>
+							</li>
+							
+							<li class="nav-item px-2">
+								<a class="nav-link text-color-6 replace-host" href="http://ownlyio.dev-marketplace.test/?sales">NFT Sales</a>
 							</li>
 						</ul>
 						
@@ -539,6 +543,6 @@
 	<script src="js/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.3.6" id="script"></script>
+	<script src="js/script.js?v=3.3.7" id="script"></script>
 </body>
 </html>
