--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,8 @@
 	</div>
 	
 	<div class="pt-4 pb-5 mb-5 d-none" id="sales-container">
+		<h3 class="mb-4">Ownly NFT Sales</h3>
+		
 		<div class="row mt-3 mb-5">
 			<div class="col-12 mb-3 mb-md-0">
 				<div class="card bg-color-1 h-100">
@@ -141,8 +143,6 @@
 		</div>
 		
 		<div class="mb-5" id="sales-chart-container"></div>
-		
-		<h4 class="mb-3">NFT Sales</h4>
 		
 		<div class="table-responsive mb-2">
 			<table class="table table-bordered table-striped font-size-80 font-size-md-90 font-size-xl-100">
