Add search functionality

--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@
 							<img src="img/the-sages-rant-collectibles/text.webp" class="w-100" />
 						</div>
 						<div class="text-center">
-							<a href="#" target="_blank" class="btn btn-custom-11 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
+							<a href="https://opensea.io/collection/thesagesrantcollectibles" target="_blank" class="btn btn-custom-11 font-size-100 font-size-sm-110 font-size-lg-150 px-4 px-md-5 py-2 shadow-sm" style="border-radius:30px">View on OpenSea</a>
 						</div>
 					</div>
 				</div>
@@ -133,7 +133,7 @@
 
 <div class="bg-color-18">
 	<div class="bg-color-6 font-size-100 font-size-md-120 collection-section" data-collection="titans-of-industry">
-		<div class="container text-white text-center py-3">GET 20% DISCOUNTS ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY TOKENS</div>
+		<div class="container text-white text-center py-3">GET 20% DISCOUNT ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY NFTS</div>
 	</div>
 	
 	<div class="container py-5">
