--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							</li>
 							
 							<li class="nav-item" id="connect-to-metamask-container">
-								<button type="button" class="btn btn-custom-9 shadow-sm font-size-90 py-2 px-4" id="connect-to-metamask" style="border-radius:100px">Connect Wallet</button>
+								<button type="button" class="btn btn-custom-9 shadow-sm font-size-90 py-2 px-4" id="connect-to-metamask" style="border-radius:100px">Connect&nbsp;Wallet</button>
 							</li>
 						</ul>
 					</div>
@@ -554,6 +554,6 @@
 	<script src="js/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.4.0" id="script"></script>
+	<script src="js/script.js?v=3.4.1" id="script"></script>
 </body>
 </html>
