Add OHA collection

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=26">
+	<link rel="stylesheet" href="css/style.css?v=27">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -73,6 +73,16 @@
 							<li class="nav-item dropdown px-2">
 								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Collections</a>
 								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
+									<li style="border-bottom:1px solid #cccccc">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=oha" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
+											<div class="d-flex align-items-center">
+												<div class="pe-3">
+													<img src="img/collection-logos/8.webp" class="shadow-sm rounded-3" width="40" />
+												</div>
+												<div class="font-size-sm-110 pe-2">Ownly House of Art</div>
+											</div>
+										</a>
+									</li>
 									<li style="border-bottom:1px solid #cccccc">
 										<a href="http://ownlyio.dev-marketplace.test/?collection=cryptosolitaire" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
 											<div class="d-flex align-items-center">
@@ -220,7 +230,7 @@
 							<div class="mb-4">
 								<div class="text-color-6 font-size-90 pb-2 neo-bold">JOIN OUR VIP LIST FOR THE INSIDE SCOOP!</div>
 								
-								<form id="newsletter-form" action="https://formspree.io/f/xayajjqb" method="POST">
+								<form class="newsletter-form">
 									<div class="d-flex align-items-center mb-3">
 										<div class="d-flex flex-fill justify-content-center">
 											<input type="email" name="email_address" class="form-control d-block px-3 py-1 font-size-90" placeholder="Your email address" required />
@@ -554,6 +564,6 @@
 	<script src="js/moment.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.0/dist/jdenticon.min.js" async integrity="sha384-VngWWnG9GS4jDgsGEUNaoRQtfBGiIKZTiXwm9KpgAeaRn6Y/1tAFiyXqSzqC8Ga/" crossorigin="anonymous"></script>
-	<script src="js/script.js?v=3.4.1" id="script"></script>
+	<script src="js/script.js?v=3.5.0" id="script"></script>
 </body>
 </html>
