--- a/home.html
+++ b/home.html
@@ -190,7 +190,7 @@
 										<div class="helvetica-roman font-size-120 font-size-xl-150 line-height-110 mb-2">newsletter</div>
 										<div class="d-flex">
 											<div>
-												<input type="email" class="form-control" placeholder="Enter Email" style="border:0; border-bottom:2px solid #222222" />
+												<input type="email" class="form-control" placeholder="Enter Email" name="email_address" style="border:0; border-bottom:2px solid #222222" />
 											</div>
 											<div>
 												<button type="submit" class="btn btn-custom-8" style="border:1px solid black">
