Fix newsletter submission

--- a/home.html
+++ b/home.html
@@ -131,7 +131,7 @@
 	</div>
 </div>
 
-<div class="position-relative header-collection d-none" data-collection="oha" style="min-height:calc(100vh - 80px); margin-top:80px; background-position:66% 50%">
+<div class="position-relative header-collection d-none" data-collection="oha" style="margin-top:80px">
 	<div class="d-flex w-100 py-4 background-image-cover" style="min-height:calc(100vh - 80px); background-image:url('img/oha/bg.webp'); background-position:top">
 		<div class="container">
 			<div class="d-flex align-items-center" style="min-height:calc(100vh - 80px)">
@@ -235,6 +235,8 @@
 			</div>
 		</div>
 	</div>
+	
+	
 </div>
 
 <div class="bg-color-18">
