Change Ownly Marketplace to Ownly Market

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
-	<link rel="stylesheet" href="css/style.css?v=27">
+	<link rel="stylesheet" href="css/style.css?v=28">
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6LBV47LFR4"></script>
 	<script>
@@ -59,7 +59,7 @@
 											<div class="font-size-60 font-size-sm-70 rubik-bold line-height-100" id="app-version"></div>
 										</div>
 									</div>
-									<div class="font-size-70 font-size-sm-93 rubik-bold line-height-90">MARKETPLACE</div>
+									<div class="font-size-70 font-size-sm-100 rubik-bold line-height-90" id="market-label">MARKET</div>
 								</div>
 							</a>
 						</div>
