Fix oha collection dropdown item

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<a class="nav-link dropdown-toggle text-color-6" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Collections</a>
 								<ul class="dropdown-menu px-2" aria-labelledby="navbarDropdown">
 									<li style="border-bottom:1px solid #cccccc">
-										<a href="http://ownlyio.dev-marketplace.test/?collection=oha" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="cryptosolitaire">
+										<a href="http://ownlyio.dev-marketplace.test/?collection=oha" class="dropdown-item collection-dropdown-item p-2 replace-host" data-collection="oha">
 											<div class="d-flex align-items-center">
 												<div class="pe-3">
 													<img src="img/collection-logos/8.webp" class="shadow-sm rounded-3" width="40" />
