Update display of countdown after

--- a/home.html
+++ b/home.html
@@ -208,7 +208,7 @@
 							<div class="helvetica-roman font-size-140">and discoveries</div>
 							<div class="helvetica-roman font-size-140 mb-3 mb-lg-5">in surrealism.</div>
 							
-							<div class="d-flex justify-content-lg-between mb-4 mb-lg-0" style="margin-left:-17px">
+							<div class="d-flex justify-content-lg-between mb-4 mb-lg-0" id="countdown" style="margin-left:-17px">
 								<div class="text-center" style="width:72px">
 									<div class="helvetica-roman font-size-260" id="days">00</div>
 									<div class="helvetica-roman font-size-110">Days</div>
