Add collection name in token page

--- a/home.html
+++ b/home.html
@@ -249,15 +249,15 @@
 	
 	<div class="">
 		<div class="d-none d-lg-block">
-			<img src="img/oha/bg-2.webp" class="w-100" />
+			<img src="img/oha/bg-2.webp" class="w-100" alt="" />
 		</div>
 		
 		<div class="d-none d-md-block d-lg-none">
-			<img src="img/oha/bg-3.webp" class="w-100" />
+			<img src="img/oha/bg-3.webp" class="w-100" alt="" />
 		</div>
 		
 		<div class="d-block d-md-none">
-			<img src="img/oha/bg-4.webp" class="w-100" />
+			<img src="img/oha/bg-4.webp" class="w-100" alt="" />
 		</div>
 	</div>
 </div>
