--- a/token.html
+++ b/token.html
@@ -18,6 +18,17 @@
 		</div>
 		
 		<div class="col-md-6 col-xxl-7 ps-lg-3 ps-xl-4 mt-4 mt-md-5">
+			<div class="d-flex justify-content-between align-items-center mb-2">
+				<div class="font-size-120">
+					<a href="#" class="link-color-4 text-decoration-none neo-bold" id="token-collection-name"></a>
+				</div>
+				<div class="d-none" id="transfer-token-container">
+					<button class="btn p-0 m-0 text-color-6" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
+						<i class="fas fa-gift font-size-140"></i>
+					</button>
+				</div>
+			</div>
+			
 			<div class="d-flex justify-content-between">
 				<div class="d-flex align-items-center mb-1" style="min-height:61px">
 					<div class="neo-black font-size-200 font-size-md-250 mb-1 token-name link text-color-6 text-decoration-none" id="token-name"></div>
