--- a/home.html
+++ b/home.html
@@ -259,6 +259,15 @@
 		<div class="d-block d-md-none">
 			<img src="img/oha/bg-4.webp" class="w-100" alt="" />
 		</div>
+		
+		<div class="container">
+			<div class="d-flex flex-column flex-lg-row align-items-lg-center py-3">
+				<div class="helvetica-roman pe-lg-3 mb-3 mb-lg-0">Tokenizing physical art is one of the benefits that we can enjoy through the emergence of NFTs. Aside from digital art and in-game collectibles, traditional artworks are one of the assets that NFTs can revolutionize.</div>
+				<div class="">
+					<a href="https://medium.com/ownlyio/mechanics-on-getting-ownlys-tokenized-physical-art-collection-df6199c9e924" target="_blank" class="btn btn-custom-4 helvetica-roman">Check out the Mechanics on Getting Ownly’s Tokenized Physical Art Collection</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
