Add NFT transfer function

--- a/token.html
+++ b/token.html
@@ -23,7 +23,7 @@
 					<a href="#" class="link-color-4 text-decoration-none neo-bold" id="token-collection-name"></a>
 				</div>
 				<div class="d-none" id="transfer-token-container">
-					<button class="btn p-0 m-0 text-color-6" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
+					<button class="btn p-0 m-0 link-color-4" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
 						<i class="fas fa-gift font-size-140"></i>
 					</button>
 				</div>
