--- a/artist.html
+++ b/artist.html
@@ -153,7 +153,7 @@
 						
 						<div class="d-flex align-items-center mb-4 mb-md-5">
 							<div class="me-3">
-								<a href="http://www.pxzmarso.com/" target="_blank">
+								<a href="http://www.marso63.art" target="_blank">
 									<i class="fas fa-globe text-color-6 font-size-150"></i>
 								</a>
 							</div>
