Add large grid, small grid and list view options

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<title>Ownly Marketplace</title>
 	<link rel="icon" href="img/ownly/own-token.webp">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="fontawesome/css/all.css">
+<!--	<link rel="stylesheet" href="fontawesome/css/all.css">-->
+	<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
 	<link rel="stylesheet" href="js/alertifyjs/css/alertify.min.css" />
 	<link rel="stylesheet" href="js/alertifyjs/css/themes/default.min.css" />
 	<link rel="stylesheet" href="js/fancybox/fancybox.css" />
