--- a/artist.html
+++ b/artist.html
@@ -158,7 +158,7 @@
 								</a>
 							</div>
 							<div class="me-3">
-								<a href="https://twitter.com/pxzmarso" target="_blank">
+								<a href="https://twitter.com/marso_63" target="_blank">
 									<i class="fab fa-twitter text-color-6 font-size-150"></i>
 								</a>
 							</div>
@@ -168,7 +168,7 @@
 								</a>
 							</div>
 							<div class="me-3">
-								<a href="https://www.instagram.com/pxzmarso/" target="_blank">
+								<a href="https://www.instagram.com/marso.63/" target="_blank">
 									<i class="fab fa-instagram text-color-6 font-size-150"></i>
 								</a>
 							</div>
