--- a/home.html
+++ b/home.html
@@ -276,7 +276,7 @@
 		<div class="container text-white text-center py-3">GET 20% DISCOUNT ON PURCHASES USING OWN TOKEN AS PAYMENT ON NEWLY MINTED TITANS OF INDUSTRY NFTS</div>
 	</div>
 	
-	<div class="container py-5">
+	<div class="container pt-4 pb-5">
 <!--		<div class="px-md-1 mb-5">-->
 <!--			<ul class="nav nav-pills nav-pills-custom-1 nav-justified">-->
 <!--				<li class="nav-item mx-md-2">-->
@@ -288,18 +288,35 @@
 <!--			</ul>-->
 <!--		</div>-->
 		
-		<div class="row mt-md-4" id="tokens-container">
-			<div class="d-flex justify-content-center">
-				<div class="py-5 mb-4 text-center">
-					<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
-						<span class="visually-hidden">Loading...</span>
+		<div class="text-end px-md-3 d-none" id="view-options-container">
+			<div class="btn-group" role="group">
+				<button type="button" class="btn btn-custom-13 font-size-130 border-end-0 active change-token-view" value="large-grid" data-bs-toggle="tooltip" title="Large Grid">
+					<i class="fas fa-grid-2"></i>
+				</button>
+				<button type="button" class="btn btn-custom-13 font-size-130 border-end-0 change-token-view" value="small-grid" data-bs-toggle="tooltip" title="Small Grid">
+					<i class="fas fa-grid"></i>
+				</button>
+				<button type="button" class="btn btn-custom-13 font-size-130 change-token-view" value="list" data-bs-toggle="tooltip" title="List">
+					<i class="fas fa-list"></i>
+				</button>
+			</div>
+		</div>
+		
+		<div class="row mt-4" id="tokens-container">
+			<div id="loading-container">
+				<div class="d-flex justify-content-center">
+					<div class="py-5 mb-4 text-center">
+						<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
+							<span class="visually-hidden">Loading...</span>
+						</div>
+						
+						<div>Loading Collection</div>
 					</div>
-					
-					<div>Loading Collection</div>
 				</div>
 			</div>
 		</div>
 		
 		<div class="d-none" id="pagination-container"></div>
+		<div class="d-none" id="temp"></div>
 	</div>
 </div>
