Integrate property filtering from API to frontend

--- a/home.html
+++ b/home.html
@@ -290,7 +290,7 @@
 		
 		<div class="text-end px-md-3 d-none" id="view-options-container">
 			<div class="btn-group" role="group">
-				<button type="button" class="btn btn-custom-13 d-flex align-items-center" style="height:47.2px" data-bs-toggle="collapse" data-bs-target="#collapse-properties" aria-expanded="false" aria-controls="collapse-properties">
+				<button type="button" class="btn btn-custom-13 d-flex align-items-center" id="filter-by-properties" style="height:47.2px" data-bs-toggle="collapse" data-bs-target="#collapse-properties" aria-expanded="false" aria-controls="collapse-properties">
 					<i class="fas fa-filter font-size-130 pe-2 "></i>
 					<span class="font-size-90">Filter by Properties</span>
 					<span class="badge bg-color-3 ms-2" id="property-filter-count"></span>
