Update owned and favorited tokens

--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
 			
 			<div class="d-none" id="owned-container">
 				<div class="row mt-md-4" id="owned-tokens-container">
-					<div class="d-flex justify-content-center">
+					<div class="d-flex justify-content-center" id="loading-container-owned-tokens">
 						<div class="py-5 mb-4 text-center">
 							<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
 								<span class="visually-hidden">Loading...</span>
@@ -86,7 +86,7 @@
 			
 			<div class="d-none" id="favorites-container">
 				<div class="row mt-md-4" id="favorite-tokens-container">
-					<div class="d-flex justify-content-center">
+					<div class="d-flex justify-content-center" id="loading-container-favorite-tokens">
 						<div class="py-5 mb-4 text-center">
 							<div class="spinner-grow background-image-cover bg-transparent mb-4" style="width:6rem; height:6rem; background-image:url('img/ownly/own-token.png')" role="status">
 								<span class="visually-hidden">Loading...</span>
