--- a/token.html
+++ b/token.html
@@ -22,24 +22,30 @@
 				<div class="font-size-120">
 					<a href="#" class="link-color-4 text-decoration-none neo-bold" id="token-collection-name"></a>
 				</div>
-				<div class="d-none" id="transfer-token-container">
-					<button class="btn p-0 m-0 link-color-4" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
-						<i class="fas fa-gift font-size-140"></i>
-					</button>
-				</div>
 			</div>
 			
 			<div class="d-flex justify-content-between">
 				<div class="d-flex align-items-center mb-1" style="min-height:61px">
 					<div class="neo-black font-size-200 font-size-md-250 mb-1 token-name link text-color-6 text-decoration-none" id="token-name"></div>
 				</div>
-				<div class="d-flex align-items-center py-1 ps-3 add-to-favorites-container">
-					<div class="">
-						<button class="btn add-to-favorites p-0 m-0" data-status="0" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
-							<i class="fa-heart font-size-140 text-color-1"></i>
+				<div class="d-flex align-items-center">
+					<div class="pe-2 d-none" id="transfer-token-container">
+						<button type="button" class="btn btn-custom-14 font-size-130 change-token-view" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer">
+							<i class="fas fa-gift"></i>
 						</button>
+						<!--					<button class="btn p-0 m-0 link-color-4" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">-->
+						<!--						<i class="fas fa-gift font-size-140"></i>-->
+						<!--					</button>-->
 					</div>
-					<div class="ps-2 font-size-90 text-color-1 favorites-count">0</div>
+					
+					<div class="d-flex align-items-center py-1 ps-3 add-to-favorites-container">
+						<div class="">
+							<button class="btn add-to-favorites p-0 m-0" data-status="0" style="width:24px; height:24px; border-radius:50%; box-shadow: none">
+								<i class="fa-heart font-size-140 text-color-1"></i>
+							</button>
+						</div>
+						<div class="ps-2 font-size-90 text-color-1 favorites-count">0</div>
+					</div>
 				</div>
 			</div>
 			
