Fix related tokens in token page

--- a/token.html
+++ b/token.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="d-flex align-items-center">
 					<div class="pe-2 d-none" id="transfer-token-container">
-						<button type="button" class="btn btn-custom-14 font-size-130 change-token-view" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer">
+						<button type="button" class="btn btn-custom-14 font-size-130 change-token-view" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Gift">
 							<i class="fas fa-gift"></i>
 						</button>
 						<!--					<button class="btn p-0 m-0 link-color-4" id="transfer-token-show-modal" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Transfer" style="width:24px; height:24px; border-radius:50%; box-shadow: none">-->
@@ -244,51 +244,6 @@
 <div class="bg-color-18 pb-md-5">
 	<div class="container py-5">
 		<div class="neo-bold font-size-130 font-size-lg-160 text-center mb-4 mb-md-5">YOU MIGHT LIKE ON THIS COLLECTION</div>
-		
-		<div class="px-5 d-none d-xl-block">
-			<div id="related-tokens-container-xl" class="carousel slide px-5">
-				<div class="carousel-inner"></div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-xl" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-xl" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
-		
-		<div class="px-5 d-none d-md-block d-xl-none">
-			<div id="related-tokens-container-md" class="carousel slide px-5">
-				<div class="carousel-inner"></div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-md" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-md" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
-		
-		<div class="px-5 d-block d-md-none">
-			<div id="related-tokens-container-xs" class="carousel slide px-4 px-sm-5">
-				<div class="carousel-inner"></div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#related-tokens-container-xs" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#related-tokens-container-xs" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
-		
-		<div class="position-relative px-5" style="overflow:hidden">
-			<div class="invisible position-absolute w-100 px-5" id="tokens-container" style="top:0; left:0"></div>
-		</div>
+		<div class="d-flex overflow-auto" id="tokens-container"></div>
 	</div>
 </div>
