--- a/index.html
+++ b/index.html
@@ -605,7 +605,8 @@
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/web3.min.js?v=3"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script src="js/alertifyjs/alertify.min.js"></script>
 	<script src="js/ellipsis.min.js"></script>
 	<script src="js/fancybox/fancybox.umd.js"></script>
