Add display of collections in home page

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 				<div class="position-relative">
 					<h1 class="text-white rubik-bold font-size-250 font-size-lg-300 font-size-xl-400 text-center text-md-start mb-5">Buy, own, collect, and trade 1 of 1 edition crypto artworks by talented artists.</h1>
 					<div class="text-center text-md-start">
-						<a href="https://ownly.market?collection=oha" class="d-inline-block btn btn-custom-2 px-5 py-3 mx-1 font-size-110 font-size-sm-120 line-height-120" style="min-width:257px; border-radius:35px; letter-spacing:0.05em">VIEW COLLECTIONS</a>
+						<a href="#collections" class="d-inline-block btn btn-custom-2 px-5 py-3 mx-1 font-size-110 font-size-sm-120 line-height-120" style="min-width:257px; border-radius:35px; letter-spacing:0.05em">VIEW COLLECTIONS</a>
 					</div>
 				</div>
 			</div>
@@ -68,6 +68,16 @@
 					<div class="container w-100"></div>
 				</div>
 			</div>
+		</div>
+	</div>
+</div>
+
+<div class="bg-color-18" id="collections">
+	<div class="container py-5">
+		<p class="text-center rubik-bold font-size-200 font-size-md-280 text-color-5 mb-4">COLLECTIONS</p>
+		
+		<div class="row flex-nowrap overflow-auto py-3" id="collections-container">
+		
 		</div>
 	</div>
 </div>
