--- a/home.html
+++ b/home.html
@@ -72,6 +72,31 @@
 	</div>
 </div>
 
+<div class="bg-color-2">
+	<div class="container py-5">
+		<div class="px-5 py-3">
+			<div class="px-5">
+				<div class="position-relative search-field-container">
+					<div class="position-absolute" style="top:19px; left:22px">
+						<i class="fas fa-search font-size-130"></i>
+					</div>
+					
+					<div class="d-flex">
+						<div class="flex-fill">
+							<input type="text" class="form-control font-size-110 search-field" placeholder="Search Collections, NFTs or enter contract address" style="padding-left:64px; height:60px; border-radius:15px 0 0 15px" />
+						</div>
+						<div class="">
+							<button class="btn btn-custom-1 px-5 font-size-110" style="border-radius:0 15px 15px 0; height:60px">SEARCH</button>
+						</div>
+					</div>
+					
+					<div class="position-absolute w-100 d-none search-suggestions-container" style="top:60px; left:0; z-index:1"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="bg-color-18" id="collections">
 	<div class="container py-5">
 		<p class="text-center rubik-bold font-size-200 font-size-md-280 text-color-5 mb-4">COLLECTIONS</p>
